# sentiment-analysis-platform

./: .gitignore  API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT.md  MLOPS.md  README.md  SCALABILITY.md  pyproject.toml
src/ingestion/: consumer.py  mock_producer.py
src/utils/: logger.py
