[tool.poetry]
name = "sentiment-analysis-platform"
version = "0.1.0"
description = "Real-Time Sentiment Analysis Platform with LLMs"
authors = ["Anxo Baston"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pyspark = "^3.5.0"
langchain = "^0.1.0"
transformers = "^4.37.0"
sentence-transformers = "^2.3.0"
qdrant-client = "^1.7.0"
torch = ">=2.0.0, !=2.0.1"
accelerate = "^0.26.0"
bitsandbytes = "^0.42.0"
peft = "^0.7.0"
faker = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
